# visurai

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
backend/: .env.example  README.md  chains.py  graph.py  image_gen.py  main.py  models.py  pyproject.toml  settings.py  tts.py  vision.py
backend/static/audio/: concat_1760689612457758000_ca5e32.txt  concat_1760691451049590000_01a4f1.txt  concat_1760699802936675000_66c988.txt  concat_1760700507624296000_42be27.txt  concat_1760701690300851000_3b193e.txt  concat_1760702682536565000_f9f97c.txt  concat_1760702888601271000_49a9ee.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddBookDialog.tsx  BookCard.tsx  DyslexiaToggle.tsx
frontend/src/integrations/supabase/: types.d.ts
frontend/src/pages/: Index.tsx  Input.tsx  Library.tsx  Story.tsx
frontend/src/store/: useStoryStore.ts
frontend/supabase/: config.toml
frontend/supabase/functions/audio-proxy/: index.ts
