[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.27",
    "langchain-openai>=0.2.12",
    "langgraph>=0.2.36",
    "langgraph-cli[inmem]>=0.1.0",
    "openai>=2.4.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.1.1",
    "replicate>=1.0.7",
    "uvicorn>=0.37.0",
    "tenacity>=9.0.0",
    "langchain-community>=0.3.31",
]
